test react query

--- a/.env
+++ b/.env
@@ -7,3 +7,6 @@ NEXTAUTH_URL=http://localhost:3000
 MONGO_USER=fatemeghafari77
 MONGO_PASS=NoERisX99wBrN4Bl
 MONGO_URI=mongodb+srv://${MONGO_USER}:${MONGO_PASS}@cluster0.xhmztka.mongodb.net/?retryWrites=true&w=majority
+
+
+NEXT_PUBLIC_API_KEY=https://652e19eff9afa8ef4b280a1d.mockapi.io/list
