Update API key and add stale time to query client

--- a/.env
+++ b/.env
@@ -8,5 +8,5 @@ MONGO_USER=fatemeghafari77
 MONGO_PASS=NoERisX99wBrN4Bl
 MONGO_URI=mongodb+srv://${MONGO_USER}:${MONGO_PASS}@cluster0.xhmztka.mongodb.net/?retryWrites=true&w=majority
 
-
+# NEXT_PUBLIC_API_KEY=https://api.mockfly.dev/mocks/2bc47bdd-cfe7-4a88-bb4c-5ab293afb8a5
 NEXT_PUBLIC_API_KEY=https://652e19eff9afa8ef4b280a1d.mockapi.io/list
