--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tanstack/react-query": "^4.36.1",
     "@tanstack/react-query-devtools": "^4.36.1",
     "@tanstack/react-table": "^8.11.0",
+    "@uploadthing/react": "^6.2.2",
     "axios": "^1.6.4",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
@@ -37,10 +38,12 @@
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.48.2",
     "recharts": "^2.11.0",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^6.3.3",
     "vaul": "^0.8.0",
     "zod": "^3.22.4"
   },
