--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,7 +35,7 @@
     ".next/types/**/*.ts",
     "src/app/register/page.tsx",
     "src/components/dashboard/TabUsers.tsx"
-  ],
+, "src/app/api/userExists/route.js"  ],
   "exclude": [
     "node_modules"
   ]
