--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.13.0",
+    "@cloudinary/url-gen": "^1.16.1",
     "@hookform/resolvers": "^3.3.2",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -33,8 +35,10 @@
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.293.0",
     "mongoose": "^8.0.1",
+    "multer": "^1.4.5-lts.1",
     "next": "14.0.3",
     "next-auth": "^4.24.5",
+    "next-cloudinary": "^5.20.0",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
@@ -50,6 +54,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/js-cookie": "^3.0.6",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
