struggle with authOptions 1

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,9 +23,8 @@
       }
     ],
     "paths": {
-      "@/*": [
-        "./src/*"
-      ]
+      "@/*": ["./src/*"],
+      "auth": ["./auth"]
     }
   },
   "include": [
