struggle with authOptions 2

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,8 +23,9 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"],
-      "auth": ["./auth"]
+      "@/*": [
+        "./src/*"
+      ]
     }
   },
   "include": [
