--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "next": "14.0.3",
     "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
+    "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
@@ -46,6 +47,7 @@
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.3.3",
+    "uuid": "^9.0.1",
     "vaul": "^0.8.0",
     "zod": "^3.22.4"
   },
@@ -54,8 +56,10 @@
     "@types/js-cookie": "^3.0.6",
     "@types/multer": "^1.4.11",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
