--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,7 +37,7 @@
     "src/components/dashboard/TabUsers.tsx",
     "src/app/api/userExists/route.ts",
     "src/app/api/auth/[...nextauth]/route.ts"
-  ],
+, "src/utilities/SmoothScrolling.jsx"  ],
   "exclude": [
     "node_modules"
   ]
