--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "gsap",
         "hookform",
         "Kdrama",
+        "lerp",
         "tabel",
         "tanstack",
         "Uploadthing"
