--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "cmdk": "^0.2.0",
     "gsap": "^3.12.5",
     "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.293.0",
     "mongoose": "^8.0.1",
     "next": "14.0.3",
@@ -46,6 +47,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
     "recharts": "^2.11.0",
+    "resend": "^3.2.0",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.3.3",
@@ -56,6 +58,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/js-cookie": "^3.0.6",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/multer": "^1.4.11",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.14",
