--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-hook-form": "^7.48.2",
     "recharts": "^2.11.0",
     "resend": "^3.2.0",
+    "sass": "^1.75.0",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.3.3",
