--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,9 +35,12 @@
     ".next/types/**/*.ts",
     "src/app/register/page.tsx",
     "src/components/dashboard/TabUsers.tsx",
-    "src/app/api/userExists/route.ts",
-    "src/app/api/auth/[...nextauth]/route.ts"
-, "src/utilities/SmoothScrolling.jsx", "src/lib/connectDB.t/js", "src/lib/connectDB.ts"  ],
+    "src/app/api/login/route.ts",
+    "src/app/api/auth/[...nextauth]/route.ts",
+    "src/utilities/SmoothScrolling.jsx",
+    "src/lib/connectDB.t/js",
+    "src/lib/connectDB.ts"
+  ],
   "exclude": [
     "node_modules"
   ]
