--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
+    "react-query": "^3.39.3",
     "recharts": "^2.11.0",
     "resend": "^3.2.0",
     "sass": "^1.75.0",
