--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,9 @@
       "@/*": [
         "./src/*"
       ]
-    }
+    },
+    // "types": ["node", "mailtrap"],
+    
   },
   "include": [
     "next-env.d.ts",
