--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.293.0",
+    "mailtrap": "^3.3.0",
     "mongoose": "^8.0.1",
     "next": "14.0.3",
     "next-auth": "^4.24.5",
